test/errors/class_in_function.correct
error: class_in_function.li:2:5: class 'FunctionClass' must be declared at global scope
│ class FunctionClass {
│ ~~~~~~~~~~~~~~~~~~~~~
│ ^
